<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefs_cache_section">
		<!--
			The sd card size to be used for caching wil be stored in shared
			preferences under key 'maxSdCardUsageMb' (in Mb)
			Default values will be replaced by real sd card size (max) at start
		-->
		<org.opensatnav.ui.SDCardUsagePreference
			android:title="@string/prefs_cache_sdcard"
			android:summary="@string/prefs_cache_sdcard_summary"
			android:persistent="true"
			android:dialogMessage="@string/prefs_cache_sdcard_dialog"
			android:text="@string/megabytes_abbreviation" android:max="512" android:defaultValue="32"
			android:dialogTitle="@string/prefs_cache_sdcard_title" android:key="maxSdCardUsageMb" />
		<org.opensatnav.ui.SDCardClearPreference android:title="@string/prefs_cache_clear"
			android:summary="@string/prefs_cache_clear_summary"
			android:dialogMessage="@string/prefs_cache_clear_confirm"
			android:key="clear_cache"
			android:persistent="true" 
			 />
	
</PreferenceCategory><PreferenceCategory android:title="@string/prefs_contribute_section">
<EditTextPreference android:dialogTitle="@string/prefs_contribute_osm_username" android:summary="@string/prefs_contribute_osm_username_summary" android:title="@string/prefs_contribute_osm_username" android:dialogMessage="@string/prefs_contribute_osm_username_summary" android:key="@string/pref_username_key"></EditTextPreference>
<EditTextPreference android:dialogMessage="@string/prefs_contribute_osm_password_summary" android:summary="@string/prefs_contribute_osm_password_summary" android:title="@string/prefs_contribute_osm_password" android:dialogTitle="@string/prefs_contribute_osm_password" android:key="@string/pref_password_key" android:password="true"  ></EditTextPreference>

</PreferenceCategory>
</PreferenceScreen>