<?xml version="1.0" encoding="utf-8"?>
<!--
**
*/
-->

<LinearLayout android:id="@+id/TripStatistics" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"  
	android:orientation="vertical" 
	xmlns:android="http://schemas.android.com/apk/res/android">

	<TableLayout android:layout_width="fill_parent" 
		android:layout_height="0dip" android:layout_weight="1" >
		<TableRow>
			<TextView android:text="@string/current_speed_label"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="15sp">
			</TextView>
			<TextView android:id="@+id/current_speed" android:text="@string/not_available_string"
				android:textSize="30sp" android:textStyle="bold" android:textColor="#ffffff">
			</TextView>
			<TextView android:id="@+id/current_speed_units" android:text="@string/not_available_string"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="8sp">
			</TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/aver_trip_speed_label"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="15sp">
			</TextView>
			<TextView android:id="@+id/aver_trip_speed" android:text="@string/not_available_string"
				android:textSize="30sp" android:textStyle="bold" android:textColor="#ffffff">
			</TextView>
			<TextView android:id="@+id/aver_speed_units" android:text="@string/not_available_string"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="8sp">
			</TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/trip_distance_label"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="15sp">
			</TextView>
			<TextView android:id="@+id/trip_distance" android:text="@string/not_available_string"
				android:textSize="30sp" android:textStyle="bold" android:textColor="#ffffff">
			</TextView>
			<TextView android:id="@+id/distance_units" android:text="@string/not_available_string"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="8sp">
			</TextView>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/trip_duration_label"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="15sp">
			</TextView>
			<TextView android:id="@+id/trip_duration" android:text="@string/not_available_string"
				android:textSize="30sp" android:textStyle="bold" android:textColor="#ffffff">
			</TextView>
			<TextView android:id="@+id/trip_duration_units" android:text="@string/not_available_string"
				android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff"
				android:padding="8sp">
			</TextView>
		</TableRow>
	</TableLayout>
	
	<LinearLayout android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:orientation="horizontal" android:gravity="right" >
		<Button android:id="@+id/resetStatistics" android:text="@string/reset_trip_statistics"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
				
		<Button android:id="@+id/closeStatistics" android:text="@string/close_statistics_view"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>

